--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ tasks.withType(JavaCompile) {
 
 application {
     mainModule = 'ucf.assignments'
-    mainClass = 'ucf.assignments.HelloApplication'
+    mainClass = 'ucf.assignments.TodoApp'
 }
 
 javafx {
